Fix issues when using flex-wrap: wrap in alert

--- a/src/less/components/alert.less
+++ b/src/less/components/alert.less
@@ -4,8 +4,6 @@
     margin-top: 0;
     margin-bottom: @base-margin;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
 
     &.alert-default {
         .alert-variant(@text-gray, @light-gray);
@@ -29,6 +27,10 @@
 
     &.alert-danger {
         .alert-variant(@brand-error, @brand-error-light);
+    }
+
+    &.alert-complex {
+        flex-direction: column;
     }
 
     > p {
